[gd_scene load_steps=7 format=3 uid="uid://bocvii8b6crwq"]

[ext_resource type="Script" path="res://weapons/pellet_simple.gd" id="1_3vyej"]
[ext_resource type="Texture2D" uid="uid://cff3tn2hwhyvf" path="res://weapons/texture/buck 1.png" id="1_gbfas"]
[ext_resource type="PackedScene" uid="uid://shsfe4x8n0iy" path="res://general subnodes/player_hit_box_moving.tscn" id="3_7j48a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lqmo6"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gyy7c"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ius2j"]
radius = 6.0

[node name="Pellet_Simple" type="RigidBody2D"]
collision_layer = 8
collision_mask = 5
gravity_scale = 0.0
script = ExtResource("1_3vyej")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lqmo6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_gbfas")

[node name="Timer" type="Timer" parent="."]

[node name="Player_HitBox_Moving" parent="." instance=ExtResource("3_7j48a")]
delete_after_hit = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_HitBox_Moving"]
shape = SubResource("CircleShape2D_gyy7c")
debug_color = Color(0.811765, 0.411765, 0, 0.419608)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ius2j")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Player_HitBox_Moving" to="." method="_on_player_hit_box_moving_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
